Fix compile errors.