@@ -11,6 +11,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * Interpolate method imports.
@@ -120,7 +121,7 @@ class Imports {
         ImportsCollectorImpl(Interpolation interpolation) {
             predicates = Arrays.stream(Imports.ImportType.values())
                     .map(type -> type.buildPredicate(interpolation))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         @Override
